<resources>
    <string name="app_name">Task4_2309</string>

    <string name="hello_world">Hello world!</string>
    <string name="login">login</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="phone">phone</string>
    <string name="plus">+</string>
    <string name="showPassword">Show password</string>
    <string name="rememberMe">Remember me</string>
    <string name="action_settings">Settings</string>
    <string name="enter">Enter</string>
    <color name="blue">#9999FF</color>
</resources>
